--- a/TelstraAndroidTest/app/build.gradle
+++ b/TelstraAndroidTest/app/build.gradle
@@ -26,4 +26,10 @@ dependencies {
     })
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta2'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.squareup.retrofit:retrofit:1.7.0'
+    compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:1.6.0'
+    compile 'com.squareup.okhttp:okhttp:1.6.0'
+    compile 'com.squareup.okio:okio:1.0.1'
 }
