--- a/TelstraAndroidTest/app/build.gradle
+++ b/TelstraAndroidTest/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     compile 'com.squareup.okio:okio:1.0.1'
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:support-v4:25.0.0'
+    compile 'com.android.support:recyclerview-v7:25.0.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta2'
     testCompile 'junit:junit:4.12'
 }
